--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@
 #Folders
 target
 Screenshots
+Reports
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
